--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.15.2"
 psycopg2-binary = "^2.9.10"
 djangorestframework-simplejwt = "^5.3.1"
 python-dotenv = "^1.0.1"
+factory-boy = "^3.3.1"
 
 
 [build-system]
