--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,8 @@ djangorestframework-simplejwt = "^5.3.1"
 python-dotenv = "^1.0.1"
 factory-boy = "^3.3.1"
 django-extensions = "^3.2.3"
+black = "^24.10.0"
+flake8 = "^7.1.1"
 
 
 [build-system]
