--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,68 +3,54 @@ FROM python:3.12.0-slim AS python-base
 
 # python
 ENV PYTHONUNBUFFERED=1 \
-    # prevents python creating .pyc files
     PYTHONDONTWRITEBYTECODE=1 \
-    \
-    # pip
     PIP_NO_CACHE_DIR=off \
     PIP_DISABLE_PIP_VERSION_CHECK=on \
     PIP_DEFAULT_TIMEOUT=100 \
-    \
-    # poetry
-    # https://python-poetry.org/docs/configuration/#using-environment-variables
     POETRY_VERSION=1.8.4 \
-    # make poetry install to this location
     POETRY_HOME="/opt/poetry" \
-    # make poetry create the virtual environment in the project's root
-    # it gets named `.venv`
     POETRY_VIRTUALENVS_IN_PROJECT=true \
-    # do not ask any interactive question
     POETRY_NO_INTERACTION=1 \
-    \
-    # paths
-    # this is where our requirements + virtual environment will live
     PYSETUP_PATH="/opt/pysetup" \
     VENV_PATH="/opt/pysetup/.venv"
 
-
-# prepend poetry and venv to path
+# Prepend Poetry and virtualenv to PATH
 ENV PATH="$POETRY_HOME/bin:$VENV_PATH/bin:$PATH"
 
-RUN apt-get update \
-    && apt-get install --no-install-recommends -y \
-    # deps for installing poetry
+# Install system dependencies
+RUN apt-get update && apt-get install --no-install-recommends -y \
     curl \
-    # deps for building python deps
-    build-essential
+    build-essential \
+    libpq-dev \
+    gcc \
+    git && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
-
-# install poetry - respects $POETRY_VERSION & $POETRY_HOME
+# Install Poetry
 RUN curl -sSL https://install.python-poetry.org | python3 -
 
-# install postgres dependencies inside of Docker
-RUN apt-get update \
-    && apt-get -y install libpq-dev gcc \
-    && pip install psycopg2
+# Verify Poetry installation
+RUN poetry --version
 
-# remove unnecessary files
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# copy project requirement files here to ensure they will be cached.
+# Set working directory for Poetry setup
 WORKDIR $PYSETUP_PATH
 COPY poetry.lock pyproject.toml ./
 
-# install runtime deps - uses $POETRY_VIRTUALENVS_IN_PROJECT internally
-RUN poetry install --no-dev
+# Install Python dependencies using Poetry
+RUN poetry install --no-dev && poetry run pip install --upgrade pip
 
-# quicker install as runtime deps are already installed
-RUN poetry install
+# Install runtime dependencies
+RUN poetry run pip install psycopg2-binary
 
+# Application working directory
 WORKDIR /app
-
 COPY . /app/
 
+# Collect static files
+RUN poetry run python manage.py collectstatic --noinput
+
+# Expose application port
 EXPOSE 8000
 
+# Gunicorn startup command
 CMD ["poetry", "run", "gunicorn", "-c", "gunicorn_config.py", "backend.wsgi:application"]
