--- a/nginx/conf.d/ripple.conf
+++ b/nginx/conf.d/ripple.conf
@@ -1,17 +1,21 @@
 server {
-    listen 8080;
-    server_name localhost;
+    listen 80;
 
-    location /static/ {
-        alias /app/staticfiles/;
-        autoindex on;
+    root /usr/share/nginx/html;
+    index index.html;
+    location / {
+        try_files $uri /index.html;
     }
 
-    location / {
+    location /api/ {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /static/ {
+        alias /app/staticfiles/;
     }
 }
